third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-msrv/transmute-ref-src-dst-not-references.stderr
error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-src-dst-not-references.rs:17:54
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ---------------^^^^^^-
   |                                       |              |
   |                                       |              expected reference, found `usize`
   |                                       |              help: consider borrowing here: `&0usize`
   |                                       expected due to this
   |
   = note: expected reference `&_`
                   found type `usize`

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/ui-msrv/transmute-ref-src-dst-not-references.rs:17:39
   |
17 | const SRC_DST_NOT_REFERENCES: usize = transmute_ref!(0usize);
   |                                       ^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found reference
   |
   = note:   expected type `usize`
           found reference `&_`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
